--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,9 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "MC1.7.10-1.2.0"
+version = "MC1.7.10-1.2.1"
 group= "yuma140902.miningmod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "miningmod"
+archivesBaseName = "MiningMod"
 
 minecraft {
     version = "1.7.10-10.13.4.1558-1.7.10"
